--- a/website-flask/templates/fLogin.html
+++ b/website-flask/templates/fLogin.html
@@ -3,7 +3,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Enter Daredevil</title>
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-            <link rel="stylesheet" type="text/css" href="eportalhome.css">
+            <link rel="stylesheet" type="text/css" href="/static/eportalhome.css/">
                 <style>
                 </style>
     </head>
@@ -24,19 +24,17 @@
                 <div class="content">
                     <div class="text-center">
                         <i class='glyphicon glyphicon-education slide'></i>
-                        <h2 class="slide"><strong>Daredevil Login</strong></h2> <hr>
+                        <h2 class="slide"><font color = "black"<strong>Daredevil Login</strong></h2></font><hr>
                         <div class="form-group">
 
                         </div>
 
     <div class="form-group">
-             <div class="alert alert-danger">
 
-                </div>
              </div>
 
                     </div>
-                    <p>UserEmail: </p>
+                    <font color = "black"><p>UserEmail: </p></font>
                     <div class="form-group slide">
             	       <div class="input-group">
                         <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
@@ -44,7 +42,7 @@
                 </div>
 
             </div>
-            <p>Password:</p>
+            <p><font color = "black">Password:</font></p>
                 <div class="form-group slide">
             	<div class="input-group">
                 <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
@@ -55,7 +53,7 @@
                     <div class="text-center">
 
 
-                                <div class="form-group">
+            <div class="form-group">
              <button type="submit" class="btn btn-xl btn-success slide" name="btn-login">Sign In</button>
             </div>
 
