--- a/website-flask/templates/slogin.html
+++ b/website-flask/templates/slogin.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Coward Login</title>
           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-            <link rel="stylesheet" type="text/css" href="eportalhome.css">
+            <link rel="stylesheet" type="text/css" href="/static/eportalhome.css/">
                 <style></style>
 
     </head>
@@ -25,7 +25,7 @@
                 <div class="content">
                     <div class="text-center">
                         <i class='glyphicon glyphicon-education slide'></i>
-                        <h2 class="slide"><strong>Coward Login</strong></h2> <hr>
+                        <h2 class="slide"><font color = "black"><strong>Coward Login</strong></font></h2> <hr>
                         <div class="form-group">
 
                         </div>
@@ -33,14 +33,12 @@
 
 
     <div class="form-group slide">
-             <div class="alert alert-danger">
 
-                </div>
              </div>
 
 
                     </div>
-                    <p>UserEmail: </p>
+                    <font color = "black"><p>UserEmail: </p></font>
 
                     <div class="form-group slide">
             	       <div class="input-group">
@@ -49,7 +47,7 @@
                 </div>
 
             </div>
-            <p>Password:</p>
+            <font color = "black"><p>Password: </p></font>
                 <div class="form-group slide">
             	   <div class="input-group">
                     <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
